# setup-environment-FaustoLavezzari

./: .gitignore  CMakeLists.txt
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yaml
.github/actions/style/: action.yml
docs/: DoxyFile
include/: complex-calculator.h  greetings.h
lib/sharedlib/: CMakeLists.txt
lib/sharedlib/include/: shared.h
lib/sharedlib/src/: shared.c
lib/staticlib/: CMakeLists.txt
lib/staticlib/include/: static.h
lib/staticlib/src/: static.c
src/: complex-calculator.c  greetings.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
